> COMMIT

# Created

# Refactored
- addNewRecord() to include breaktime hours @ FirestoreContext.tsx 

# Imported

## TODO
- Wrong Password Error redirects to Register Form

## NOTES
- Email Availability Checker @ Form Stepper 1