@@ -1,0 +1,10 @@
+index.html,1661170479844,120d838406f1e9ec1d6787a599eed18e8a4f49ba73bb77a3a8302e34fcdc37de
+assets/index.8fb03abd.css,1661170479843,8cecec09124d8da5e5f5234fb82328e4a874b9f9b8058f1d3b7632b44c08d200
+assets/login.3b81be19.svg,1661170479843,193e4aa9e6cf132d7078fd96669aefdb43d34f308fcf5517c904032f7fe79807
+assets/poppins-latin-400-normal.7d93459d.woff2,1661170479843,5f9b987ff38cc1aac77f609e7cdc137f99f88148af67f629c77ea1f1b47e4cc0
+assets/register.80112591.svg,1661170479843,3d7b50516ba628df8ef19dd0eb71fd8c397034e3656dde57768defdaef5279ba
+assets/poppins-latin-ext-400-normal.cb8bdeab.woff2,1661170479841,91142c2c419798609ee6d717101aae56171bed616df722250aafed8682248861
+assets/poppins-devanagari-400-normal.478b3ab7.woff2,1661170479843,2e7987914a107d99a38ce17c2d8e461a1de2c20c5d3cfbf8bcb5f038a01661b1
+assets/poppins-all-400-normal.c68e1edb.woff,1661170479844,c972f2666fc5096a070a10431d264ae453ff75478c229f5c1fbce469d4527dfc
+vite.svg,1658287819189,59ec4b6085a0cb1bf712a5e48dd5f35b08e34830d49c2026c18241be04e05d5a
+assets/index.804de702.js,1661170479843,8d41563bedaa31aecbd0e9f13db7de4e2c4e933b62475bee15c78e7075cc8d83
