@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prod": "npm run build && npm run preview",
+    "firebase": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
